@@ -1,4 +1,7 @@
 2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
+	* xfer-src/element-glue.c: Add debugging statement.
+
+2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Taper/Scribe.pm: Do not confess if device not available.
 
 2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
